src/types/tests/snapshots/tgbot__types__tests__reply__force_reply-2.snap
---
source: src/types/tests/reply.rs
expression: value
---
{
  "force_reply": true,
  "input_field_placeholder": "placeholder",
  "selective": true
}
