src/types/tests/snapshots/tgbot__types__tests__reply__force_reply-3.snap
---
source: src/types/tests/reply.rs
expression: value
---
{
  "force_reply": true,
  "selective": false
}
