src/types/tests/snapshots/tgbot__types__tests__reply__inline_keyboard.snap
---
source: src/types/tests/reply.rs
expression: "ReplyMarkup::from(vec![vec![InlineKeyboardButton::for_url(\"url\",\n\"tg://user?id=1\").with_icon_custom_emoji_id(\"test\"),\nInlineKeyboardButton::for_web_app(\"web app\",\nWebAppInfo::from(\"https://example.com\")).with_style(InlineKeyboardButtonStyle::Danger),\nInlineKeyboardButton::for_callback_data(\"cd\",\n\"cd\").with_style(InlineKeyboardButtonStyle::Primary),\nInlineKeyboardButton::for_copy_text(\"cp\", \"val\"),\nInlineKeyboardButton::for_switch_inline_query(\"siq\", \"siq\"),\nInlineKeyboardButton::for_switch_inline_query_current_chat(\"siq_cc\",\n\"siq_cc\"),\nInlineKeyboardButton::for_switch_inline_query_chosen_chat(\"siq_chc\",\nSwitchInlineQueryChosenChat::new(\"query\"),),\nInlineKeyboardButton::for_callback_game(\"cg\"),\nInlineKeyboardButton::for_pay(\"pay\"),\nInlineKeyboardButton::for_login_url(\"login url\", \"http://example.com\"),]])"
---
{
  "inline_keyboard": [
    [
      {
        "text": "url",
        "icon_custom_emoji_id": "test",
        "url": "tg://user?id=1"
      },
      {
        "text": "web app",
        "style": "danger",
        "web_app": {
          "url": "https://example.com"
        }
      },
      {
        "text": "cd",
        "style": "primary",
        "callback_data": "cd"
      },
      {
        "text": "cp",
        "copy_text": {
          "text": "val"
        }
      },
      {
        "text": "siq",
        "switch_inline_query": "siq"
      },
      {
        "text": "siq_cc",
        "switch_inline_query_current_chat": "siq_cc"
      },
      {
        "text": "siq_chc",
        "switch_inline_query_chosen_chat": {
          "query": "query"
        }
      },
      {
        "text": "cg",
        "callback_game": {}
      },
      {
        "text": "pay",
        "pay": true
      },
      {
        "text": "login url",
        "login_url": {
          "url": "http://example.com"
        }
      }
    ]
  ]
}
