src/types/tests/snapshots/tgbot__types__tests__reply__login_url-2.snap
---
source: src/types/tests/reply.rs
expression: url.clone()
---
{
  "url": "url",
  "forward_text": "forward text"
}
