src/types/tests/snapshots/tgbot__types__tests__reply__login_url-3.snap
---
source: src/types/tests/reply.rs
expression: url.clone()
---
{
  "url": "url",
  "bot_username": "bot_username",
  "forward_text": "forward text"
}
