src/types/tests/snapshots/tgbot__types__tests__reply__login_url-4.snap
---
source: src/types/tests/reply.rs
expression: url
---
{
  "url": "url",
  "bot_username": "bot_username",
  "forward_text": "forward text",
  "request_write_access": true
}
