src/types/tests/snapshots/tgbot__types__tests__reply__reply_keyboard_remove.snap
---
source: src/types/tests/reply.rs
expression: "ReplyMarkup::from(ReplyKeyboardRemove::default().with_selective(true))"
---
{
  "remove_keyboard": true,
  "selective": true
}
